tests/fixtures/invalid/pow_list_bytes_bool.py
# Cannot call pow() with List[int], Bytes, Bool
x = pow([1, 2, 3], b"hello", True)
